--- a/qtify/src/Components/SearchBar/SearchBar.module.css
+++ b/qtify/src/Components/SearchBar/SearchBar.module.css
@@ -1,26 +1,24 @@
-.searchContent{
+.wrapper{
     display: flex;
-    align-items: center;
-    border-radius: 8px;
-    overflow: hidden;
-    border: 1px solid #121212;
+    align-items: stretch;
+    height: 48px;
 }
 
-.searchBar{
+.search{
+    padding: 14px 20px;
+    height: 100%;
     width: 502px;
-    min-height: 48px;
-    padding: 14px 0px 15px 20px;
-    color: #121212;
-    font-family: Lato;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 0.2px;
+    border-radius: 8px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border: 1px solid var(--color-black);
 }
 
 .searchButton{
-    width: 66px;
-    min-height: 48px;
-    /* background-color: #FFF; */
+    border-radius: 0px 8px 8px 0px;
+    padding: 14px 20px;
+    height: 100%;
+    border: 1px solid var(--color-black);
+    border-left: none;
+    cursor: pointer;
 }
