--- a/qtify/src/Components/Card/Card.module.css
+++ b/qtify/src/Components/Card/Card.module.css
@@ -15,6 +15,12 @@
     border-radius: 10px;
 }
 
+.img{
+    width: 159px;
+    height: 170px;
+    border-radius: 10px 10px 0px 0px;
+}
+
 .follows{
     padding: 2px 6px 6px 6px;
 }
@@ -28,3 +34,17 @@
     line-height: normal;
 }
 
+.followsDiv{
+    display: inline-flex;
+    padding: 4px 8px;
+    align-items: flex-start;
+    gap: 1px;
+    border-radius: 10px;
+    background-color: #121212;
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
