searchFunctionality-qtify-takehome

--- a/qtify/src/Components/Card/Card.module.css
+++ b/qtify/src/Components/Card/Card.module.css
@@ -32,6 +32,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .followsDiv{
