--- a/qtify/src/Components/Navbar/Navbar.module.css
+++ b/qtify/src/Components/Navbar/Navbar.module.css
@@ -6,4 +6,5 @@
     align-items: center;
     justify-content: space-between;
     background-color: var(--color-primary);
+    overflow-y: visible;
 }
